# COMP1100

./: .gitignore  .swp  Cargo.toml  README.md  history.txt  meetings.md  save.json  team_values.md  test_cards.md  zip.nu
code/: .gitignore  query.surql
code/scrapper/: Cargo.toml
code/src/: main.rs
code/website/: .gitignore  README.md  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  query.surql  vite.config.ts
documents/: meetings.md
documents/Iteration_2/: business_model_canvas.md  competitor_analysis.md  learning_cards.md  minimum_viable_product.md  test_cards.md  value_proposition_canvas.md
documents/Iteration_3/: business_model_canvas.md  competitor_analysis.md  learning_cards.md  minimum_viable_product.md  test_cards.md  value_proposition_canvas.md
documents/iteration 1/: business_model_canvas.md  learning_cards.md  team_values.md  test_cards.md
documents/iteration_1/: business_model_canvas.md  learning_cards.md  team_values.md  test_cards.md  value_proposition_canvas.md
documents/iteration_3/: test_cards.md
interviews/Rafael_Chase_transcripts/: week_three_interviews
interviews/caleby/: 1_anthony.md  2_william.md  3_james.md  interview.md
interviews/interation_2/: CALEB_2025_9_10_1.md  CALEB_2025_9_12_2.md
meetings/: week_10_meeting.md  week_11_meeting.md  week_12_meeting.md  week_13_meeting.md  week_2_meeting.md  week_3_meeting.md  week_4_meeting.md  week_5_meeting.md  week_6_meeting.md  week_7_meeting.md  week_8_meeting.md  week_9_meeting.md
src/: lib.rs  main.rs  scraper.rs  tracing.rs
(+156 files in other folders)
