[package]
name = "comp1100"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.3.7"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
ystd = "0.0.9"
