[package]
name = "comp1100"
version = "0.1.0"
edition = "2024"

[dependencies]
html5ever = "0.35.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.3.7"
time = { version = "0.3.41", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
ystd = "0.0.10"
